--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   get: ^4.6.6
   sizer: ^3.0.4
   http: ^1.2.2
+  flutter_web_base: ^0.0.10
+
+
 
 dev_dependencies:
   flutter_test:
